# speech-ml

./: .gitignore  pyproject.toml
assignment1/: melbanks.py  model.ipynb  report.md
assignment2/: report.md  wav2vec2decoder.py
