[project]
authors = [{name = "Vasilii Filin", email = "55667050+FVA13@users.noreply.github.com"}]
description = "..."
name = "assignments"
requires-python = "== 3.11"
version = "0.1.0"
dependencies = ["torch", "torchaudio", "lightning", "soundfile>=0.13.1,<0.14", "thop>=0.1.1.post2209072238,<0.2", "ptflops>=0.7.4,<0.8"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
assignments = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
ipykernel = ">=6.29.5,<7"
ffmpeg-python = ">=0.2.0,<0.3"
sox = "*"
requests = ">=2.32.3,<3"
seaborn = ">=0.13.2,<0.14"
librosa = ">=0.10.2.post1,<0.11"
mlflow = ">=2.21.0,<3"
